--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,48 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12 border bg-secondary" style="height: 400px;"></div>
+<div class="container-fluid p-0">
+    <div class="row g-0">
+        <img class="img-fluid banner-img w-100 h-100" style="object-fit: cover;" src="https://i.gadgets360cdn.com/large/amazon-main-banner-1200x675_1696706496874.jpg" alt="">
+
+        <div class="col-lg-12 d-flex justify-content-center align-items-center py-5">
+            <h1>Best Deals!</h1>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-3">
+            
+            <div class="col-lg-4">
+                <div class="card text-center h-100 custom-hover-card">
+                    <div class="card-body pt-2">
+                        <img class="img-fluid card-img-fixed" src="https://th.bing.com/th/id/R.77eed415b01a3ec4f6cb7758a5a2a6d4?rik=XKDGn49n844u4Q&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fshoes-png-nike-shoes-transparent-background-800.png&ehk=ZvKLgGJIAl%2fJYtcu4emEZimity8VBQnk3UNcaW8MbLQ%3d&risl=&pid=ImgRaw&r=0.png" alt="">
+                        <h5 class="card-title">Nike Air-Runner</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
+                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card text-center h-100 custom-hover-card">
+                    <div class="card-body pt-2 custom-card">
+                        <img class="img-fluid card-img-fixed" src="https://static.vecteezy.com/system/resources/previews/022/722/945/original/samsung-galaxy-s23-ultra-transparent-image-free-png.png" alt="">
+                        <h5 class="card-title">Samsung S24 Ultra</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
+                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card text-center h-100 custom-hover-card">
+                    <div class="card-body pt-2">
+                        <img class="img-fluid card-img-fixed" src="https://th.bing.com/th/id/R.77eed415b01a3ec4f6cb7758a5a2a6d4?rik=XKDGn49n844u4Q&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fshoes-png-nike-shoes-transparent-background-800.png&ehk=ZvKLgGJIAl%2fJYtcu4emEZimity8VBQnk3UNcaW8MbLQ%3d&risl=&pid=ImgRaw&r=0.png" alt="">
+                        <h5 class="card-title">Nike Air-Runner</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
+                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
