--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <div class="container">
-    <a routerLink="home" class="navbar-brand">Amazon</a>
+  <div class="container-sm">
+    <a routerLink="home" class="navbar-brand" id="brand-name">
+      <img src="https://www.nicepng.com/png/full/16-167642_amazon-logo-amazon-logo-white-text.png" alt="" width="85" height="24">
+    </a>
 
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
