minor changes in home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-sm">
     <a routerLink="home" class="navbar-brand" id="brand-name">
-      <img src="https://www.nicepng.com/png/full/16-167642_amazon-logo-amazon-logo-white-text.png" alt="" width="85" height="24">
+      <img src="https://www.nicepng.com/png/full/16-167642_amazon-logo-amazon-logo-white-text.png" alt="" width="85"
+        height="24">
     </a>
 
     <div class="collapse navbar-collapse">
+      <form class="d-flex">
+        <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success" type="submit">Search</button>
+      </form>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a routerLink="about" class="nav-link">about</a>
