--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                         <img class="img-fluid card-img-fixed" src="https://th.bing.com/th/id/R.77eed415b01a3ec4f6cb7758a5a2a6d4?rik=XKDGn49n844u4Q&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fshoes-png-nike-shoes-transparent-background-800.png&ehk=ZvKLgGJIAl%2fJYtcu4emEZimity8VBQnk3UNcaW8MbLQ%3d&risl=&pid=ImgRaw&r=0.png" alt="">
                         <h5 class="card-title">Nike Air-Runner</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
-                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                        <a href="" class="btn w-100 mt-1">SHOP NOW</a>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                         <img class="img-fluid card-img-fixed" src="https://static.vecteezy.com/system/resources/previews/022/722/945/original/samsung-galaxy-s23-ultra-transparent-image-free-png.png" alt="">
                         <h5 class="card-title">Samsung S24 Ultra</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
-                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                        <a href="" class="btn w-100 mt-1">SHOP NOW</a>
                     </div>
                 </div>
             </div>
@@ -35,10 +35,10 @@
             <div class="col-lg-4">
                 <div class="card text-center h-100 custom-hover-card">
                     <div class="card-body pt-2">
-                        <img class="img-fluid card-img-fixed" src="https://th.bing.com/th/id/R.77eed415b01a3ec4f6cb7758a5a2a6d4?rik=XKDGn49n844u4Q&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fshoes-png-nike-shoes-transparent-background-800.png&ehk=ZvKLgGJIAl%2fJYtcu4emEZimity8VBQnk3UNcaW8MbLQ%3d&risl=&pid=ImgRaw&r=0.png" alt="">
-                        <h5 class="card-title">Nike Air-Runner</h5>
+                        <img class="img-fluid card-img-fixed" src="https://png.pngtree.com/png-vector/20240913/ourmid/pngtree-kitchen-appliances-png-image_12933242.png" alt="">
+                        <h5 class="card-title">Kitchen Appliances</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sint?</p>
-                        <a href="" class="btn btn-primary w-100 mt-1">SHOP NOW</a>
+                        <a href="" class="btn w-100 mt-1">SHOP NOW</a>
                     </div>
                 </div>
             </div>
